# OpenGLQuickEngine

./: .gitmodules  CMakeLists.txt  README.md
engine/include/renderer/: renderer.hpp
engine/src/glad/: glad.c  glad.h
engine/src/renderer/: renderer.cpp
math/: common.hpp  matrix.hpp  matrix_math.hpp  quaternion.hpp  quaternion_math.hpp  vector.hpp  vector_math.hpp
math/internal/: matrix.inl  matrix_math.inl  quaternion.inl  quaternion_math.inl  vector.inl  vector_math.inl
tests/: CMakeLists.txt
tests/simple/: main.cpp
